--- a/oe_kemexon_custom/report/invoice_report_template.xml
+++ b/oe_kemexon_custom/report/invoice_report_template.xml
@@ -4,27 +4,43 @@
         <xpath expr="//t[@t-call='web.external_layout']" position="replace">
             <t t-call="web.external_layout">
                 <div style="border: 2px solid black;"/>
-                <h3 class="text-center">INVOICE</h3>
+                <center>
+                    <b style="font-size:35px;" class="text-center">INVOICE</b>
+                </center>
                 <div style="border: 2px solid black;"/>
                 <br/>
                 <div class="row">
                     <div class="col-4">
                         <div class="row">
-                            <strong>Invoice No :</strong>
-                            <span t-field="o.name"/>
+                            <div class="col-4">
+                                <strong>Invoice No :</strong>
+                                <br/>
+                                <strong>Deal Ref :</strong>
+                            </div>
+                            <div class="col-2"/>
                             <br/>
-                            <strong>Deal Ref :</strong>
-                            <span class="m-0" t-field="o.deal_ref"/>
+                            <div class="col-6">
+                                <span t-field="o.name"/>
+                                <br/>
+                                <span class="m-0" t-field="o.deal_ref"/>
+                            </div>
                         </div>
                     </div>
                     <div class="col-4"/>
                     <div class="col-4">
                         <div class="row">
-                            <strong>Date :</strong>
-                            <span class="m-0" t-field="o.invoice_date"/>
+                            <div class="col-4">
+                                <strong>Date :</strong>
+                                <br/>
+                                <strong>Due Date :</strong>
+                            </div>
+                            <div class="col-2"/>
                             <br/>
-                            <strong>Due Date :</strong>
-                            <span class="m-0" t-field="o.invoice_date"/>
+                            <div class="col-4">
+                                <span class="m-0" t-field="o.invoice_date"/>
+                                <br/>
+                                <span class="m-0" t-field="o.invoice_date"/>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -182,24 +198,19 @@
                                 </tr>
                             </t>
                         </t>
+                        <tr>
+                            <td name="td_section_subtotal">
+                                <strong class="mr16">Total (<span t-field="o.currency_id"/>)</strong>
+
+                            </td>
+                            <td colspan="99" class="is-subtotal text-end">
+                                <span  style="text-align:right;" class="m-0" t-field="o.amount_total"/>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
-                <hr style="height:2px; border:none; background-color:black;"/>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="row">
-                            Total (<span t-field="o.currency_id"/>)
-                        </div>
-                    </div>
-                    <div class="col-4"/>
-                    <div class="col-4">
-                        <div class="row">
-                            <span class="m-0" t-field="o.amount_total"/>
-                        </div>
 
-                    </div>
-                </div>
                 <br/>
                 <div style="border: 2px solid black;"/>
                 <strong>Delivery Information</strong>
@@ -208,51 +219,51 @@
                 <div class="row">
                     <div class="col-5">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-5">
                                 <strong>B/L Date</strong>
                             </div>
                             <br/>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-4">
                                 <span class="m-0" t-field="o.bill_date"/>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-5">
                                 <strong>Vessel Name</strong>
                             </div>
                             <br/>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-4">
                                 <span class="m-0" t-field="o.vessel_name"/>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-5">
                                 <strong>Delivery Location</strong>
                             </div>
                             <br/>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-4">
                                 <span class="m-0" t-field="o.delivery_location"/>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-5">
                                 <strong>Incoterms</strong>
                             </div>
                             <br/>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-4">
                                 <span class="m-0" t-field="o.invoice_incoterm_id"/>
                             </div>
                         </div>
                     </div>
-                    <div class="col-2"/>
-                    <div class="col-5">
-                        <img t-att-src="'oe_kemexon_custom/static/src/img/kemexon_seal.jpeg'"
-                             style="max-height: 2cm; max-width: 4cm;"/>
-                    </div>
+                    <!--                    <div class="col-2"/>-->
+                    <!--                    <div class="col-5">-->
+                    <!--                        <img t-att-src="'oe_kemexon_custom/static/src/img/kemexon_seal.jpeg'"-->
+                    <!--                             style="max-height: 2cm; max-width: 4cm;"/>-->
+                    <!--                    </div>-->
                 </div>
 
 
@@ -264,19 +275,19 @@
                     <div class="col-1">
                         <strong>Currency</strong>
                     </div>
-                    <div class="col-2"/>
+                    <div class="col-1"/>
                     <div class="col-1">
                         <t t-if="o.partner_id.bank_ids">
                             <span class="m-0" t-field="o.partner_id.bank_ids[0].currency_id"/>
                         </t>
                     </div>
-                    <div class="col-2"/>
+                    <div class="col-1"/>
                     <div class="col-7">
                         <div class="row">
                             <div class="col-4">
                                 <strong>Bank</strong>
                             </div>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-6">
                                 <t t-if="o.partner_id.bank_ids">
                                     <span class="m-0" t-field="o.partner_id.bank_ids[0].bank_id"/>
@@ -287,7 +298,7 @@
                             <div class="col-4">
                                 <strong>In favour of</strong>
                             </div>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-6">
                                 <t t-if="o.partner_id.bank_ids">
                                     <span class="m-0" t-field="o.partner_id.bank_ids[0].acc_holder_name"/>
@@ -298,7 +309,7 @@
                             <div class="col-4">
                                 <strong>A/C No</strong>
                             </div>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-6">
                                 <t t-if="o.partner_id.bank_ids">
                                     <span class="m-0" t-field="o.partner_id.bank_ids[0].acc_number"/>
@@ -309,7 +320,7 @@
                             <div class="col-4">
                                 <strong>Swift Code</strong>
                             </div>
-                            <div class="col-2"/>
+                            <div class="col-1"/>
                             <div class="col-6">
                                 <t t-if="o.partner_id.bank_ids">
                                     <span class="m-0" t-field="o.partner_id.bank_ids[0].bank_id.bic"/>
@@ -326,7 +337,7 @@
                 <div style="border: 2px solid black;"/>
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
-                <ul>
+                <ul style="font-size:18px;">
                     <li>Kemexon Ltd. follows a detailed process as per the company policy for informing any change in
                         bank account/ remittance process. We request you to not rely on any isolated email communication
                         informing the change of bank account etc. If you do so, the same shall be at your risk and
@@ -363,24 +374,29 @@
         </div>
         <div class="footer">
             <div class="text-center" style="border-top: 1px solid black;">
-                <strong>
-                    <center>'This is a system generated document and does not require a signature'</center>
-                </strong>
-                <ul class="list-inline mb4">
+                <!--                <strong>-->
+                <!--                    <center>'This is a system generated document and does not require a signature'</center>-->
+                <!--                </strong>-->
+                <!--                <ul class="list-inline mb4">-->
 
-                    <li t-if="company.phone" class="list-inline-item d-inline">
-                        <span class="o_force_ltr" t-field="company.phone"/>
-                    </li>
-                    <li t-if="company.email" class="list-inline-item d-inline">
-                        <span t-field="company.email"/>
-                    </li>
-                    <li t-if="company.website" class="list-inline-item d-inline">
-                        <span t-field="company.website"/>
-                    </li>
-                    <li t-if="company.vat" class="list-inline-item d-inline"><t
-                            t-out="company.country_id.vat_label or 'Tax ID'"/>:
-                        <span t-field="company.vat"/>
-                    </li>
+                <!--                    <li t-if="company.phone" class="list-inline-item d-inline">-->
+                <!--                        <span class="o_force_ltr" t-field="company.phone"/>-->
+                <!--                    </li>-->
+                <!--                    <li t-if="company.email" class="list-inline-item d-inline">-->
+                <!--                        <span t-field="company.email"/>-->
+                <!--                    </li>-->
+                <!--                    <li t-if="company.website" class="list-inline-item d-inline">-->
+                <!--                        <span t-field="company.website"/>-->
+                <!--                    </li>-->
+                <!--                    <li t-if="company.vat" class="list-inline-item d-inline"><t-->
+                <!--                            t-out="company.country_id.vat_label or 'Tax ID'"/>:-->
+                <!--                        <span t-field="company.vat"/>-->
+                <!--                    </li>-->
+                <!--                </ul>-->
+                <ul class="list-inline mb4">
+                    <li>Kemexon Limited</li>
+                    <li>Office 1501, Prosperity tower 39 Queens Road, Hong Kong</li>
+                    <li>+852 3050 0344 - contact@kemexon.com</li>
                 </ul>
 
                 <div t-if="report_type == 'pdf'" class="text-muted">
