[MOD] Report edits

--- a/oe_kemexon_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemexon_custom/report/pro-forma_invoice_template.xml
@@ -6,7 +6,7 @@
                 <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
                 <div style="border: 2px solid black;"/>
                 <center>
-                    <b style="font-size:35px;" class="text-center">Proforma INVOICE</b>
+                    <b style="font-size:35px;" class="text-center">PROFORMA INVOICE</b>
                 </center>
                 <div style="border: 2px solid black;"/>
                 <br/>
@@ -17,14 +17,14 @@
                             <span t-field="doc.name"/>
                             <br/>
                             <strong>Deal Ref :</strong>
-                            <span class="m-0" t-field="doc.deal_ref"/>
+                            <span class="m-0" t-field="doc.deal_ref" t-options='{"format": "MM/dd/yyyy"}'/>
                         </div>
                     </div>
                     <div class="col-4"/>
                     <div class="col-4">
                         <div class="row">
                             <strong>Date :</strong>
-                            <span class="m-0" t-field="doc.date_order"/>
+                            <span class="m-0" t-field="doc.date_order" t-options='{"format": "MM/dd/yyyy"}'/>
                             <!--                            <br/>-->
                             <!--                            Due Date :-->
                             <!--                            <span class="m-0" t-field="o.invoice_date"/>-->
@@ -52,6 +52,8 @@
                     <br/>
                     <span t-field="doc.partner_id.state_id.name"></span>
                 </t>
+                <br/>
+                <br/>
                 <br/>
                 <br/>
                 <t t-set="lines_to_report" t-value="doc._get_order_lines_to_report()"/>
@@ -150,7 +152,7 @@
                 <br/>
                 <br/>
                 <strong>Delivery Information</strong>
-                <div style="border: 2px solid black;"/>
+                <div style="border: 3px solid black;"/>
                 <br/>
                 <br/>
                 <div class="row">
