--- a/oe_kemexon_custom/report/report.xml
+++ b/oe_kemexon_custom/report/report.xml
@@ -22,12 +22,12 @@
             <field name="format">custom</field>
             <field name="page_height">297</field>
             <field name="page_width">210</field>
-            <field name="orientation">Portrait</field>
+            <field name="orientation">Landscape</field>
             <field name="margin_top">12</field>
             <field name="margin_bottom">8</field>
             <field name="margin_left">3</field>
             <field name="margin_right">3</field>
-            <field name="header_line" eval="False"/>
+            <field name="header_line" eval="True"/>
             <field name="header_spacing">10</field>
             <field name="dpi">110</field>
         </record>
